@@ -1,3 +1,5 @@
+NULL =
+
 SUBDIRS = 		\
 	data		\
 	libmuine	\
@@ -8,7 +10,8 @@ SUBDIRS = 		\
 	plugins		\
 	doc		\
 	m4		\
-	po
+	po		\
+	$(NULL)
 
 EXTRA_DIST =			\
 	TODO			\
@@ -20,9 +23,13 @@ EXTRA_DIST =			\
 	intltool-update.in	\
 	muine.spec.in		\
 	muine.spec		\
-	muine.snk
+	muine.snk		\
+	$(NULL)
 
 DISTCLEANFILES = 		\
 	intltool-extract 	\
 	intltool-merge 		\
-	intltool-update
+	intltool-update		\
+	$(NULL)
+
+# vim: set ts=8 sw=8 noet:
