@@ -1,5 +1,11 @@
 2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>
 
+	* Makefile.am:
+
+	Tiny cleanups.
+
+2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>
+
 	* configure.in:
 
 	Explicitly check for pkg-config.
